fix scrollbar appearing in all pages

--- a/todo-client/src/styles/Login.module.scss
+++ b/todo-client/src/styles/Login.module.scss
@@ -9,13 +9,13 @@ main {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    margin: 0;
     .form {
       position: relative;
       display: flex;
       align-items: center;
       flex-direction: column;
       width: 100%;
-
       .message {
         width: 95%;
         border: 1px solid rgba($color: #ffff00, $alpha: 1);
